working with chat api

--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@expo/webpack-config": "^18.0.1",
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
-    "nanoid": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "metro-config": "^0.76.2",
+    "react-native-dotenv": "^3.4.8"
   },
   "private": true
 }
