splash screen + build apk

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.71.6",
     "react-native-get-random-values": "^1.8.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "expo-splash-screen": "~0.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
