--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-get-random-values": "^1.8.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.10",
-    "expo-splash-screen": "~0.18.1"
+    "expo-splash-screen": "~0.18.1",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
