--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "expo": "~48.0.11",
+    "expo-clipboard": "~4.1.2",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
@@ -20,7 +21,7 @@
     "react-native-get-random-values": "^1.8.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.10",
-    "expo-clipboard": "~4.1.2"
+    "rn-tooltip": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
