--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 EXPO_PUBLIC_API_URL=https://staging.example.com
-EXPO_PUBLIC_API_KEY=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
+EXPO_PUBLIC_API_KEY=x
