--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,10 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# local env files
-.env*.local
+# # local env files
+# .env*.local
+
+.env
 
 # typescript
 *.tsbuildinfo
