--- a/app.json
+++ b/app.json
@@ -25,6 +25,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "89ebe46f-f502-4fa0-a930-0c4c5273d088"
+      }
     }
   }
 }
