--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "expo": "~49.0.7",
     "expo-clipboard": "^4.3.1",
     "expo-status-bar": "~1.6.0",
