--- a/package.json
+++ b/package.json
@@ -9,26 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
-    "@reduxjs/toolkit": "^1.9.5",
-    "axios": "^1.4.0",
-    "date-fns": "^2.30.0",
-    "expo": "~49.0.7",
-    "expo-clipboard": "^4.3.1",
-    "expo-status-bar": "~1.6.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
+    "expo": "~50.0.14",
+    "expo-clipboard": "~5.0.1",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.73.6",
     "react-native-animated-spinkit": "^1.5.2",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-uuid": "^2.0.1",
-    "react-redux": "^8.1.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-uuid": "^2.0.2",
+    "react-redux": "^9.1.1",
     "redux-persist": "^6.0.0",
     "rn-tooltip": "^3.0.3",
-    "expo-av": "~13.4.1"
+    "expo-av": "~13.10.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
