--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "expo": "~50.0.14",
+    "expo-av": "~13.10.6",
     "expo-clipboard": "~5.0.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -26,8 +28,7 @@
     "react-native-uuid": "^2.0.2",
     "react-redux": "^9.1.1",
     "redux-persist": "^6.0.0",
-    "rn-tooltip": "^3.0.3",
-    "expo-av": "~13.10.6"
+    "rn-tooltip": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
