--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-animated-spinkit": "^1.5.2",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-uuid": "^2.0.2",
