--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,12 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# # local env files
+# local env files
 .env*.local
-
 .env
 
 # typescript
 *.tsbuildinfo
+
+# vscode
+.vscode
