--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.20.8",
     "@mistralai/mistralai": "^0.1.3",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
-    "expo": "~50.0.14",
-    "expo-av": "~13.10.6",
-    "expo-clipboard": "~5.0.1",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.9",
+    "expo-av": "^14.0.5",
+    "expo-clipboard": "^6.0.3",
+    "expo-status-bar": "^1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "^0.74.1",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-radio-buttons-group": "^3.1.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-uuid": "^2.0.2",
     "react-redux": "^9.1.1",
     "redux-persist": "^6.0.0",
     "rn-tooltip": "^3.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.6"
   },
   "private": true
 }
