--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.10",
+    "expo": "^51.0.11",
     "expo-av": "^14.0.5",
     "expo-clipboard": "^6.0.3",
     "expo-status-bar": "^1.12.1",
     "react": "18.2.0",
-    "react-native": "^0.74.1",
+    "react-native": "^0.74.2",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-safe-area-context": "^4.10.1",
