name changed. rm old icns.

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "smartbot",
+    "name": "Smartbot",
     "slug": "smartbot",
     "version": "1.0.0",
     "orientation": "portrait",
