--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
-    "expo": "^51.0.39",
-    "expo-clipboard": "^6.0.3",
-    "expo-status-bar": "^1.12.1",
-    "react": "18.2.0",
-    "react-native": "^0.74.5",
+    "expo": "^52.0.0",
+    "expo-clipboard": "~7.0.0",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-radio-buttons-group": "^3.1.0",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-uuid": "^2.0.2",
     "react-redux": "^9.1.1",
     "redux-persist": "^6.0.0",
