--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "date-fns": "^3.6.0",
     "expo": "^52.0.25",
     "expo-clipboard": "~7.0.1",
+    "expo-file-system": "~18.0.7",
     "expo-haptics": "~14.0.1",
+    "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
