--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-uuid": "^2.0.2",
     "react-redux": "^9.1.1",
     "redux-persist": "^6.0.0",
-    "rn-tooltip": "^3.0.3"
+    "rn-tooltip": "^3.0.3",
+    "expo-document-picker": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6"
