--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
-    "expo": "^52.0.25",
+    "expo": "^52.0.27",
     "expo-clipboard": "~7.0.1",
+    "expo-document-picker": "~13.0.2",
     "expo-file-system": "~18.0.7",
     "expo-haptics": "~14.0.1",
     "expo-sharing": "~13.0.1",
@@ -33,8 +34,7 @@
     "react-native-uuid": "^2.0.2",
     "react-redux": "^9.1.1",
     "redux-persist": "^6.0.0",
-    "rn-tooltip": "^3.0.3",
-    "expo-document-picker": "~13.0.2"
+    "rn-tooltip": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6"
