--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
-    "expo": "^52.0.27",
+    "expo": "~52.0.28",
     "expo-clipboard": "~7.0.1",
     "expo-document-picker": "~13.0.2",
-    "expo-file-system": "~18.0.7",
+    "expo-file-system": "~18.0.8",
     "expo-haptics": "~14.0.1",
     "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
