--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
+    "react": "18.3.1",
     "react-native": "0.79.5",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-radio-buttons-group": "^3.1.0",
@@ -35,7 +35,8 @@
     "react-native-uuid": "^2.0.2",
     "react-redux": "^9.1.1",
     "redux-persist": "^6.0.0",
-    "rn-tooltip": "^3.0.3"
+    "rn-tooltip": "^3.0.3",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6"
