--- a/package.json
+++ b/package.json
@@ -11,32 +11,32 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.20.9",
     "@mistralai/mistralai": "^0.1.3",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
-    "expo": "^53.0.20",
-    "expo-clipboard": "~7.1.5",
-    "expo-document-picker": "~13.1.6",
-    "expo-file-system": "~18.1.11",
-    "expo-haptics": "~14.1.4",
-    "expo-sharing": "~13.1.5",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
+    "expo": "^52.0.47",
+    "expo-clipboard": "~7.0.1",
+    "expo-document-picker": "~13.0.3",
+    "expo-file-system": "~18.0.12",
+    "expo-haptics": "~14.0.1",
+    "expo-sharing": "~13.0.1",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.3",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.9",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-radio-buttons-group": "^3.1.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-uuid": "^2.0.2",
     "react-redux": "^9.1.1",
     "redux-persist": "^6.0.0",
-    "rn-tooltip": "^3.0.3",
-    "react-dom": "18.3.1"
+    "rn-tooltip": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6"
